# notes

./: README.md
docker/couchdb/: docker-compose.yml  init.sh
docker/java/: Dockerfile
docker/kafka/: docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf  pyproject.toml
docker/nginx/api/: server.py
docker/nginx/site/: index.html
docker/poetry/: Dockerfile
docker/postgres/: docker-compose.yml
scripts/: days_in_the_year.py
studies/aws/: README.md
studies/computer-graphics/image-processing/: reconstrucao_interpolacao.ipynb  transformacoes.py
studies/data-science/: Aluguel.ipynb  data_visualization.ipynb  exploratory_analysis.ipynb  introduction.ipynb  projeto_imobiliaria.ipynb  projeto_imobiliaria.py  statistics.ipynb
studies/data-science/data-science-from-scratch/: 1-Introduction.ipynb  README.md
studies/ddd/bank/: Application.ts  package-lock.json  package.json
studies/ddd/bank-java/: pom.xml
studies/ddd/bank-ts/: bootstrap.ts
studies/deep-learning/: README.md
studies/design-patterns/: README.md
studies/design-patterns/behavioral-patterns/: README.md
studies/design-patterns/creational-patterns/: README.md
studies/design-patterns/creative-patterns/: README.md
studies/design-patterns/structural-patterns/: README.md
studies/diagrams/: diagrams_test.py
studies/flutter/byte_bank/: pubspec.yaml
studies/flutter/byte_bank_db/: README.md  pubspec.yaml
studies/go/: README.md
studies/haskell/: README.md
studies/kafka/: README.md
studies/machine-learning/: Classification Problem.ipynb
studies/nginx/: README.md
(+286 files in other folders)
