[tool.poetry]
name = "nginx-example"
version = "0.1.0"
description = ""
authors = ["Matheus Mello <mellomatheuslima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
